--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# pytype static type analyzer
+# pytype api-data type analyzer
 .pytype/
 
 # Cython debug symbols
@@ -158,3 +158,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+*.exp.py
+/data/
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/postav-bot-h.iml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
